<resources>
    <!-- Preferences Constants -->
    <string name="game_key" translatable="false">game_key</string>
    <string name="default_start_points" translatable="false">501</string>
    <string name="prevent_sleep_key" translatable="false">prevent_sleep_key</string>
    <!-- End of Preferences Constants -->

    <string name="app_name" translatable="false">Darts Training Calculator</string>

    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="toss">Add Throw</string>
    <string name="invalid_trow_message">Enter valid values</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="prevent_phone_from_sleeping">Prevent phone from sleeping</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="all_progress_will_be_lost">All progress will be lost. Proceed?</string>
    <string name="restart_game">Restart game</string>
    <string name="about">About</string>
    <string name="phone">Phone</string>
    <string name="game">Game</string>
    <string name="share">Share</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_data">This operation cannot be undone. Are you sure you want to delete all data?</string>
    <string name="new_game">New game</string>
    <string name="start_playing_by_adding_your_throws">Start playing by adding your throws.</string>
    <string name="undo">Undo</string>
    <string name="share_game_text">%1$s\nGame: %2$d&#160;&#160;&#160;Total throws: %3$d\n\n%4$s</string>
    <string name="game_details_game_throws">Game: %1$d&#160;&#160;&#160;Total throws: %2$d</string>
    <string name="start_new_game">Start new game</string>
    <string name="score_fragment_title_bar">Score %1$d/%2$d</string>
    <string name="choose_your_game">Choose your game</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="game_with_colon">Game:</string>
    <string name="total_throws_with_colon">Total throws:</string>
    <string name="delete">Delete</string>
    <string name="add_a_throw">add a throw</string>
    <string name="change_game_title">Change game</string>
    <string name="change_game_message">This action will reset the current game. Proceed?</string>
    <string name="version">Version %1$s</string>
</resources>