<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/game">
        <ListPreference
            app:defaultValue="@string/default_start_points"
            app:entries="@array/preferencesGameTitles"
            app:entryValues="@array/preferencesGameTitles"
            app:key="@string/game_key"
            app:title="@string/choose_your_game"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/phone">
        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/prevent_sleep_key"
            app:summaryOff="@string/off"
            app:summaryOn="@string/on"
            app:title="@string/prevent_phone_from_sleeping" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">
        <Preference
            app:key="version"
            app:summary=""
            app:title="Darts Training Calculator" />
    </PreferenceCategory>

</PreferenceScreen>