<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription">

    <data>

        <import type="android.view.View" />

        <variable
            name="scoreViewModel"
            type="com.beletskiy.dartstrainingcalculator.fragments.score.ScoreViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darts_green"
        tools:context=".fragments.score.ScoreFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toTopOf="@id/add_toss_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_toss" />

        <Button
            android:id="@+id/add_toss_button"
            style="@style/score_fragment_bottom_button"
            android:text="@string/add_a_throw"
            android:visibility="@{scoreViewModel.isGameOver ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/start_new_game_button"
            style="@style/score_fragment_bottom_button"
            android:onClick="@{() -> scoreViewModel.restartGame()}"
            android:text="@string/start_new_game"
            android:visibility="@{scoreViewModel.isGameOver ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="@string/start_playing_by_adding_your_throws"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="@{scoreViewModel.tossList.size() == 0 ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>